--- a/config.json
+++ b/config.json
@@ -1,8 +1,17 @@
 {
-    "title":"可持续学园",
-    "subTitle":"热爱生活、喜欢分享。",
+    "title":"Peach",
+    "subTitle":"分享技术，记录生活",
     "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
     "GMEEK_VERSION":"last",
+    "homeUrl":"http://blog.sdgarden.top",
     "script":"<script src='https://blog.meekdai.com/Gmeek/plugins/GmeekTOC.js'></script><script src='https://blog.meekdai.com/Gmeek/plugins/lightbox.js'></script>",
-    "allHead":"<script src='https://blog.meekdai.com/Gmeek/plugins/GmeekVercount.js'></script>"
+    "allHead":"<script src='https://blog.meekdai.com/Gmeek/plugins/GmeekVercount.js'></script>",
+    "startSite":"1/1/2025",
+    "onePageListNum":15,
+    "singlePage":["about"],
+    "commentLabelColor":"#006b75",
+    "yearColorList":["#bc4c00", "#0969da", "#1f883d", "#A333D0"],
+    "bottomText":"转载请注明出处",
+    "needComment":0，
+    "primerCSS":"<link href='https://mirrors.sustech.edu.cn/cdnjs/ajax/libs/Primer/21.0.7/primer.css' rel='stylesheet' />"
 }
