--- a/config.json
+++ b/config.json
@@ -11,7 +11,9 @@
     "singlePage":["about"],
     "commentLabelColor":"#006b75",
     "yearColorList":["#bc4c00", "#0969da", "#1f883d", "#A333D0"],
-    "bottomText":"转载请注明出处",
-    "needComment":0，
+    "bottomText":"❤️转载请注明出处，谢谢❤️",
+    "needComment":1,
+    "rssSplit":"sentence",
+    "urlMode":"ru_translit",
     "primerCSS":"<link href='https://mirrors.sustech.edu.cn/cdnjs/ajax/libs/Primer/21.0.7/primer.css' rel='stylesheet' />"
 }
