--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "title":"Peach",
     "subTitle":"分享技术，记录生活",
-    "avatarUrl":"https://xget.xi-xu.me/gh/tabortao/imagebed/blob/main/image/favicon.svg",
+    "avatarUrl":"https://raw.githubusercontent.com/tabortao/imagebed/main/image/favicon.svg",
     "GMEEK_VERSION":"last",
     "homeUrl":"http://blog.sdgarden.top",
     "script":"<script src='https://blog.meekdai.com/Gmeek/plugins/GmeekTOC.js'></script><script src='https://blog.meekdai.com/Gmeek/plugins/lightbox.js'></script>",
