--- a/config.json
+++ b/config.json
@@ -1,18 +1,21 @@
 {
     "title":"Peach",
     "subTitle":"分享技术，记录生活",
-    "avatarUrl":"https://raw.githubusercontent.com/tabortao/imagebed/main/image/favicon.svg",
-    "GMEEK_VERSION":"last",
-    "homeUrl":"http://blog.sdgarden.top",
+    "homeUrl":"https://blog.sdgarden.top",
+    "avatarUrl":"https://raw.githubusercontent.com/tabortao/imagebed/blob/main/2025/GmeekBlog/avatar.svg",
+    "faviconUrl":"https://raw.githubusercontent.com/tabortao/imagebed/blob/main/2025/GmeekBlog/favicon.svg",
+    "singlePage":["link","about"],
     "script":"<script src='https://blog.meekdai.com/Gmeek/plugins/GmeekTOC.js'></script><script src='https://blog.meekdai.com/Gmeek/plugins/lightbox.js'></script>",
     "allHead":"<script src='https://blog.meekdai.com/Gmeek/plugins/GmeekVercount.js'></script>",
     "startSite":"1/1/2025",
     "onePageListNum":15,
-    "singlePage":["about"],
+    "i18n":"CN",
+    "nightTheme":"dark_colorblind",
     "commentLabelColor":"#006b75",
     "yearColorList":["#bc4c00", "#0969da", "#1f883d", "#A333D0"],
     "bottomText":"❤️转载请注明出处，谢谢❤️",
     "needComment":1,
     "rssSplit":"sentence",
-    "primerCSS":"<link href='https://mirrors.sustech.edu.cn/cdnjs/ajax/libs/Primer/21.0.7/primer.css' rel='stylesheet' />"
+    "primerCSS":"<link href='https://mirrors.sustech.edu.cn/cdnjs/ajax/libs/Primer/21.0.7/primer.css' rel='stylesheet' />",
+    "GMEEK_VERSION":"main"
 }
