--- a/config.json
+++ b/config.json
@@ -2,8 +2,8 @@
     "title":"Peach",
     "subTitle":"分享技术，记录生活",
     "homeUrl":"https://blog.sdgarden.top",
-    "avatarUrl":"https://raw.githubusercontent.com/tabortao/imagebed/main/2025/GmeekBlog/avatar.svg",
-    "faviconUrl":"https://raw.githubusercontent.com/tabortao/imagebed/main/2025/GmeekBlog/favicon.svg",
+    "avatarUrl":"https://lei-1258171996.cos.ap-guangzhou.myqcloud.com/blog/githubblog/avatar.svg",
+    "faviconUrl":"https://lei-1258171996.cos.ap-guangzhou.myqcloud.com/blog/githubblog/favicon.svg",
     "singlePage":["link","about"],
     "script":"<script src='https://blog.meekdai.com/Gmeek/plugins/GmeekTOC.js'></script><script src='https://blog.meekdai.com/Gmeek/plugins/lightbox.js'></script>",
     "allHead":"<script src='https://blog.meekdai.com/Gmeek/plugins/GmeekVercount.js'></script>",
