--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "title":"Peach",
     "subTitle":"分享技术，记录生活",
-    "homeUrl":"https://blog.sdgarden.top",
+    "homeUrl":"https://tabortao.github.io/gmeekblog/",
     "avatarUrl":"https://lei-1258171996.cos.ap-guangzhou.myqcloud.com/blog/githubblog/avatar.svg",
     "faviconUrl":"https://lei-1258171996.cos.ap-guangzhou.myqcloud.com/blog/githubblog/favicon.svg",
     "singlePage":["link","about"],
